<resources>

    <string name="app_name">SKRT SCOOT</string>

    <string name="sign_out">Sign Out</string>

    <string name="scooter_name">Name:</string>
    <string name="scooter_name_input_hint">Enter scooter name</string>
    <string name="scooter_location">Location: </string>
    <string name="scooter_location_input_hint">Enter scooter location</string>
    <string name="scooter_last_update">Last update: </string>

    <string name="button_go_back">Go back</string>

    <string name="start_ride_button">Start Ride!</string>
    <string name="update_ride_button">Update Ride!</string>
    <string name="delete_scooter_button">Delete scooter</string>

    <string name="update_ride_title">Update ride </string>
    <string name="start_ride_title">Start ride</string>
    <string name="item_ride_scooter_last_update">Reserved</string>

    <string name="toolbar_map_title">Map</string>
    <string name="toolbar_list_title">List</string>
    <string name="toolbar_ride_title">Ride</string>
    <string name="toolbar_history_title">History</string>

    <string name="new_ride">New Ride</string>
    <string name="BUCKET_URL">gs://scooterscoots-a64ab.firebasestorage.app</string>

    <string name="frag_camera_photo_album_title">Your Photo Album</string>
    <string name="frag_camera_photo_album_subtitle">(why you have it here we dont know, but dont judge)</string>
    <string name="frag_camera_open_camera">New Photo</string>

    <string name="frag_scooter_active">Active Ride</string>
    <string name="frag_scooter_active_name">Name</string>
    <string name="frag_scooter_active_time">00:00:00</string>
    <string name="frag_scooter_active_price">Price</string>
    <string name="frag_scooter_active_unlock">Unlock Ride</string>
    <string name="frag_scooter_active_pause">Pause Ride</string>
    <string name="frag_scooter_end_ride">End Ride</string>

    <string name="list_item_history_name">Name</string>
    <string name="list_item_history_from">From</string>
    <string name="list_item_history_to">To</string>
    <string name="list_item_history_time">Time and Date</string>
    <string name="list_item_history_price">Price</string>

    <string name="bottom_nav_list">List</string>
    <string name="bottom_nav_map">Map</string>
    <string name="bottom_nav_camera">Camera</string>
    <string name="bottom_nav_scooter">Scooter</string>
    <string name="bottom_nav_history">History</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="custom_title">SkrrtScoot</string>
</resources>