<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/rideListFragment"
        android:enabled="true"
        android:icon="@drawable/list"
        android:title="@string/bottom_nav_list"/>

    <item
        android:id="@+id/mapFragment"
        android:enabled="true"
        android:icon="@drawable/map"
        android:title="@string/bottom_nav_map"/>

   <!-- <item
        android:id="@+id/cameraFragment"
        android:enabled="true"
        android:icon="@drawable/camera"
        android:title="@string/bottom_nav_camera"/>-->

    <item
        android:id="@+id/scooterFragment"
        android:enabled="true"
        android:icon="@drawable/scooter"
        android:title="@string/bottom_nav_scooter"/>

    <item
        android:id="@+id/historyFragment"
        android:enabled="true"
        android:icon="@drawable/history"
        android:title="@string/bottom_nav_history"/>

</menu>