<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="20dp">

    <TextView
        android:id="@+id/button_back"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        app:cornerRadius="30dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/button_go_back"
        app:drawableStartCompat="@drawable/back" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:text="@string/update_ride_title"
        android:layout_marginBottom="10dp"
        />

    <include
        android:id="@+id/information_input"
        layout="@layout/scooter_info_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:gravity="center" />

    <Button
        android:id="@+id/button_update_ride"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cornerRadius="30dp"
        android:layout_gravity="end"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/update_ride_button"
        tools:ignore="MissingConstraints" />


</LinearLayout>