<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:defaultNavHost="true"
    app:navGraph="@navigation/nav_graph"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="20dp">

    <TextView
        android:id="@+id/button_back"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        app:cornerRadius="30dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/button_go_back"
        app:drawableStartCompat="@drawable/back" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:text="@string/start_ride_title"
        android:layout_marginBottom="10dp"
        />

    <LinearLayout
        android:id="@+id/inputs_layout"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical"
        >

        <EditText
            android:id="@+id/name_input"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/border"
            android:drawableStart="@drawable/scooter"
            android:drawablePadding="10dp"
            android:textSize="16dp"
            android:textColor="@color/black"
            android:hint="@string/scooter_name_input_hint"/>

        <EditText
            android:id="@+id/address_input"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/border"
            android:drawableStart="@drawable/house"
            android:drawablePadding="10dp"
            android:textSize="16dp"
            android:textColor="@color/black"
            android:hint="Enter address"/>

    </LinearLayout>

    <Button
        android:id="@+id/button_start_ride"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cornerRadius="30dp"
        android:layout_gravity="end"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/start_ride_button"
        tools:ignore="MissingConstraints" />



</LinearLayout>