<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="12dp"
    android:padding="8dp">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/history_card_view"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="4dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <ImageView
                android:id="@+id/history_scooter_img"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:srcCompat="@drawable/scooter"
                android:padding="10dp"
                android:scaleType="centerCrop"
                android:contentDescription="Din mor"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center">
                <TextView
                    android:id="@+id/history_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/list_item_history_name"/>
                <TextView
                    android:id="@+id/history_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/list_item_history_time"/>
            </LinearLayout>

            <TextView
                android:id="@+id/history_price"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".5"
                android:text="@string/list_item_history_price"
                android:gravity="end|center"/>

        </LinearLayout>


    </com.google.android.material.card.MaterialCardView>

</LinearLayout>